popup fixed and add scroll for overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -615,10 +615,14 @@ article.job .main-info-wrapper .job-main-info .job-btn-wrapper {
 
   /* Job popup start */
 .position-overview, .requirement {
-  display: inline-block;
-  top: 25%;
-  left: 50%;
-  transform: translate(-50%,-50%);
+  position: fixed;
+  display: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 .info-close-btn {
   float: right;
@@ -779,16 +783,17 @@ aside#job-hunting-tips {
 /* Function and State start*/
   /* Job info popup start*/
   .position-overview, .requirement {
-    position: absolute;
-    visibility: hidden;
     opacity: 0;
     z-index: 1; /*To be as an overlay on other elements */
-    width: 80%;
-    max-height: 60vh;
+    width: 60%;
+    max-height: 50vh;
+    overflow-y: scroll;
   }
   .position-overview:target, .requirement:target {
-    visibility: visible;
     opacity: 1;
+    display: inline-block;
+    top: 6rem;
+    left: 20%;
   }
   /* Job info popup end */
 
